package creature;
import javafx.scene.image.*;

public class Bat extends Demon {
    public Bat(){
        name="蝙蝠精";
        picturePath="image/Bat.png";
        picture=new Image("image/Bat.png");
        coordinateX=-1;
        coordinateY=-1;
    }
}
