package creature;
import javafx.scene.image.*;

public class Bee extends Demon {
    public Bee(){
        name="蜜蜂精";
        picturePath="image/Bee.png";
        picture=new Image("image/Bee.png");
        coordinateX=-1;
        coordinateY=-1;
    }
}
