package creature;
import javafx.scene.image.*;

public class Centipede extends Demon {
    public Centipede(){
        name="蜈蚣精";
        picturePath="image/Centipede.png";
        picture=new Image("image/Centipede.png");
        coordinateX=-1;
        coordinateY=-1;
    }
}
